# Ragicane

./: .flake8  README.md  main.py  pyproject.toml  ragicane_cli.py
.github/workflows/: ci.yml
ragicane/: __main__.py  cli.py  ingest_pipeline.py  pdf_parser.py  text_splitter.py
scripts/: bootstrap-venv.sh
tests/: test_cli.py  test_ingest_pipeline.py  test_pdf_parser.py  test_ragicane_cli.py  test_text_splitter.py
